convert data to date formats and decimals

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -13,12 +13,12 @@
    "id": "ffde1708",
    "metadata": {},
    "source": [
-    "# Libary import"
+    "# Libaries import"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "dc29f436",
    "metadata": {},
    "outputs": [],
@@ -28,8 +28,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "71ed2bd2",
+   "metadata": {},
+   "source": [
+    "# Load data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "ef76a62d",
    "metadata": {
     "scrolled": true
@@ -183,7 +191,7 @@
        "10  28/02/2024         Clear Whey        87      0,7      20,8     0,1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,8 +202,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6907d21",
+   "metadata": {},
+   "source": [
+    "## Data frame information"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "44d83e1b",
    "metadata": {},
    "outputs": [
@@ -221,6 +237,89 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f3d27f3",
+   "metadata": {},
+   "source": [
+    "## Convert date to datetime format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5a2ba520",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timestamp('2024-02-26 00:00:00')"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Date\"] = pd.to_datetime(df[\"Date\"], dayfirst=True)\n",
+    "df[\"Date\"][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc204ee5",
+   "metadata": {},
+   "source": [
+    "## Convert decimal numbers french to english format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "9ffa5e38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_english(value):\n",
+    "    if isinstance(value, str):\n",
+    "        return float(value.replace(\",\", \".\"))\n",
+    "    return value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f91e736f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 11 entries, 0 to 10\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column     Non-Null Count  Dtype         \n",
+      "---  ------     --------------  -----         \n",
+      " 0   Date       11 non-null     datetime64[ns]\n",
+      " 1   Type       11 non-null     object        \n",
+      " 2   Calories   11 non-null     int64         \n",
+      " 3   Glucides   11 non-null     float64       \n",
+      " 4   Protéines  11 non-null     float64       \n",
+      " 5   Lipides    11 non-null     float64       \n",
+      "dtypes: datetime64[ns](1), float64(3), int64(1), object(1)\n",
+      "memory usage: 656.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns_to_convert = df.columns[2:]\n",
+    "\n",
+    "df[columns_to_convert] = df[columns_to_convert].applymap(convert_to_english)"
    ]
   }
  ],
